fix suggestions from validators and add a README.md

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
       </header>
       <main class="content">
         <section class="signs">
-          <div class="greeting" id="greeting-message">
-            Howdy Nuk, please check your order:
+          <div>
+            <h2 class="greeting" id="greeting-message">
+              Howdy Jane, please check your order:
+            </h2>
           </div>
           <table class="sign__details">
             <tr>
